Pushing Product Details and Product cards to main branch

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800;900&display=swap"
-    rel="stylesheet">
+        rel="stylesheet">
 
     <!-- Css Styles -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -186,8 +186,10 @@
                             <span>About Cake shop</span>
                             <h2>Love & Sweet Caking Your Way!</h2>
                         </div>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in velit ut libero commodo sagittis. Donec posuere, 
-                            velit nec efficitur sodales, justo elit tincidunt lorem, a viverra eros risus eget felis. Curabitur.</p>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam in velit ut libero commodo
+                            sagittis. Donec posuere,
+                            velit nec efficitur sodales, justo elit tincidunt lorem, a viverra eros risus eget felis.
+                            Curabitur.</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-6">
@@ -239,26 +241,20 @@
                     </div>
                     <div class="categories__item">
                         <div class="categories__item__icon">
+                            <span class="flaticon-046-cake-4"></span>
+                            <h5>Spongecake</h5>
+                        </div>
+                    </div>
+                    <div class="categories__item">
+                        <div class="categories__item__icon">
                             <span class="flaticon-005-pancake"></span>
                             <h5>Red Velvet</h5>
                         </div>
                     </div>
                     <div class="categories__item">
                         <div class="categories__item__icon">
-                            <span class="flaticon-030-cupcake-2"></span>
-                            <h5>Biscuit</h5>
-                        </div>
-                    </div>
-                    <div class="categories__item">
-                        <div class="categories__item__icon">
-                            <span class="flaticon-006-macarons"></span>
-                            <h5>Donut</h5>
-                        </div>
-                    </div>
-                    <div class="categories__item">
-                        <div class="categories__item__icon">
-                            <span class="flaticon-006-macarons"></span>
-                            <h5>Cupcake</h5>
+                            <span class="flaticon-004-piece-of-cake"></span>
+                            <h5>Cheesecake</h5>
                         </div>
                     </div>
                 </div>
@@ -271,70 +267,78 @@
     <section class="product spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Dozen Cupcakes</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-2.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
-                            </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Cookies and Cream</a></h6>
-                            <div class="product__item__price">$30.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                            <div class="product__item__text">
+                                <h6><a href="#">Dozen Cupcakes</a></h6>
+                                <div class="product__item__price">$32.00</div>
+                                <div class="cart_add">
+                                    <div><b>$32.00</b></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-3.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-2.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Gluten Free Mini Dozen</a></h6>
-                            <div class="product__item__price">$31.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-4.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
-                            </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Cookie Dough</a></h6>
-                            <div class="product__item__price">$25.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                            <div class="product__item__text">
+                                <h6><a href="#">Cookies and Cream</a></h6>
+                                <div class="product__item__price">$30.00</div>
+                                <div class="cart_add">
+                                    <div><b>$30.00</b></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-3.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a href="#">Gluten Free Mini Dozen</a></h6>
+                                <div class="product__item__price">$31.00</div>
+                                <div class="cart_add">
+                                    <div><b>$31.00</b></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-4.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a href="#">Cookie Dough</a></h6>
+                                <div class="product__item__price">$25.00</div>
+                                <div class="cart_add">
+                                    <div><b>$25.00</b></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
                         <div class="product__item__pic set-bg" data-setbg="img/shop/product-5.jpg">
@@ -346,7 +350,7 @@
                             <h6><a href="#">Vanilla Salted Caramel</a></h6>
                             <div class="product__item__price">$05.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$05.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -362,7 +366,7 @@
                             <h6><a href="#">German Chocolate</a></h6>
                             <div class="product__item__price">$14.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$14.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -378,7 +382,7 @@
                             <h6><a href="#">Dulce De Leche</a></h6>
                             <div class="product__item__price">$32.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$32.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -394,7 +398,7 @@
                             <h6><a href="#">Mississippi Mud</a></h6>
                             <div class="product__item__price">$08.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$08.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -418,7 +422,7 @@
                             <input type="text" placeholder="Name">
                             <input type="text" placeholder="Phone">
                             <input type="text" placeholder="Type your requirements">
-                            <button type="submit" class="site-btn">registration</button>
+                            <button type="submit" class="site-btn">get a quote</button>
                         </form>
                     </div>
                 </div>
@@ -729,7 +733,9 @@
             </div>
         </div>
         <div class="map__iframe">
-            <iframe src="https://www.google.com/maps/embed/v1/view?zoom=14&center=19.0726%2C72.8845&key=AIzaSyCTG1PhZEuPkvHH9DovBumVhbFIcuRMg0g" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed/v1/view?zoom=14&center=19.0726%2C72.8845&key=AIzaSyCTG1PhZEuPkvHH9DovBumVhbFIcuRMg0g"
+                height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
     <!-- Map End -->
@@ -757,7 +763,7 @@
                             <a href="#"><img src="img/footer-logo.png" alt=""></a>
                         </div>
                         <p>Lorem ipsum dolor amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore dolore magna aliqua.</p>
+                            labore dolore magna aliqua.</p>
                         <div class="footer__social">
                             <a href="#"><i class="fa fa-facebook"></i></a>
                             <a href="#"><i class="fa fa-twitter"></i></a>
@@ -783,9 +789,9 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
-                          <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      <!-- </p>
+        <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
+        <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+        <!-- </p>
                   </div>
                   <div class="col-lg-5">
                     <div class="copyright__widget">
@@ -798,31 +804,31 @@
                 </div>
             </div>
         </div> -->
-    </div>
-</footer>
-<!-- Footer Section End -->
+        </div>
+    </footer>
+    <!-- Footer Section End -->
 
-<!-- Search Begin -->
-<div class="search-model">
-    <div class="h-100 d-flex align-items-center justify-content-center">
-        <div class="search-close-switch">+</div>
-        <form class="search-model-form">
-            <input type="text" id="search-input" placeholder="Search here.....">
-        </form>
+    <!-- Search Begin -->
+    <div class="search-model">
+        <div class="h-100 d-flex align-items-center justify-content-center">
+            <div class="search-close-switch">+</div>
+            <form class="search-model-form">
+                <input type="text" id="search-input" placeholder="Search here.....">
+            </form>
+        </div>
     </div>
-</div>
-<!-- Search End -->
+    <!-- Search End -->
 
-<!-- Js Plugins -->
-<script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.nice-select.min.js"></script>
-<script src="js/jquery.barfiller.js"></script>
-<script src="js/jquery.magnific-popup.min.js"></script>
-<script src="js/jquery.slicknav.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src="js/jquery.nicescroll.min.js"></script>
-<script src="js/main.js"></script>
+    <!-- Js Plugins -->
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.nice-select.min.js"></script>
+    <script src="js/jquery.barfiller.js"></script>
+    <script src="js/jquery.magnific-popup.min.js"></script>
+    <script src="js/jquery.slicknav.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.nicescroll.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
