--- a/shop.html
+++ b/shop.html
@@ -35,9 +35,10 @@
     </div>
 
     <!-- Offcanvas Menu Begin -->
+    <!-- Mobile View Navigation bar Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__cart">
+        <!-- <div class="offcanvas__cart">
             <div class="offcanvas__cart__links">
                 <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                 <a href="#"><img src="img/icon/heart.png" alt=""></a>
@@ -46,12 +47,12 @@
                 <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                 <div class="cart__price">Cart: <span>$0.00</span></div>
             </div>
-        </div>
+        </div> -->
         <div class="offcanvas__logo">
             <a href="./index.html"><img src="img/logo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__option">
+        <!-- <div class="offcanvas__option">
             <ul>
                 <li>USD <span class="arrow_carrot-down"></span>
                     <ul>
@@ -67,8 +68,9 @@
                 </li>
                 <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
             </ul>
-        </div>
+        </div> -->
     </div>
+    <!-- Mobile View Navigation bar End -->
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
@@ -78,7 +80,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="header__top__inner">
-                            <div class="header__top__left">
+                            <!-- <div class="header__top__left">
                                 <ul>
                                     <li>USD <span class="arrow_carrot-down"></span>
                                         <ul>
@@ -94,11 +96,11 @@
                                     </li>
                                     <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <div class="header__logo">
                                 <a href="./index.html"><img src="img/logo.png" alt=""></a>
                             </div>
-                            <div class="header__top__right">
+                            <!-- <div class="header__top__right">
                                 <div class="header__top__right__links">
                                     <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                                     <a href="#"><img src="img/icon/heart.png" alt=""></a>
@@ -107,7 +109,7 @@
                                     <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                                     <div class="cart__price">Cart: <span>$0.00</span></div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -120,9 +122,10 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
+                            <!-- <li><a href="./about.html">About</a></li> -->
                             <li class="active"><a href="./shop.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./shop-details.html">Shop Details</a></li>
                                     <li><a href="./shoping-cart.html">Shoping Cart</a></li>
@@ -131,9 +134,8 @@
                                     <li><a href="./Class.html">Class</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            </li> -->
+                            <!-- <li><a href="./blog.html">Blog</a></li> -->
                         </ul>
                     </nav>
                 </div>
@@ -174,7 +176,7 @@
                                     <option value="">Categories</option>
                                     <option value="">Red Velvet</option>
                                     <option value="">Cup Cake</option>
-                                    <option value="">Biscuit</option>
+                                    <option value="">Butter</option>
                                 </select>
                                 <input type="text" placeholder="Search">
                                 <button type="submit"><i class="fa fa-search"></i></button>
@@ -186,80 +188,87 @@
                             <select>
                                 <option value="">Default sorting</option>
                                 <option value="">A to Z</option>
-                                <option value="">1 - 8</option>
                                 <option value="">Name</option>
                             </select>
-                            <a href="#"><i class="fa fa-list"></i></a>
-                            <a href="#"><i class="fa fa-reorder"></i></a>
+                            <!-- <a href="#"><i class="fa fa-list"></i></a>
+                            <a href="#"><i class="fa fa-reorder"></i></a> -->
                         </div>
                     </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-1.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Dozen Cupcakes</a></h6>
-                            <div class="product__item__price">$32.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-2.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
-                            </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Cookies and Cream</a></h6>
-                            <div class="product__item__price">$30.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                            <div class="product__item__text">
+                                <h6><a href="#">Dozen Cupcakes</a></h6>
+                                <div class="product__item__price">$32.00</div>
+                                <div class="cart_add">
+                                    <div><b>$32.00</b></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-3.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-2.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
                             </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Gluten Free Mini Dozen</a></h6>
-                            <div class="product__item__price">$31.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="product__item">
-                        <div class="product__item__pic set-bg" data-setbg="img/shop/product-4.jpg">
-                            <div class="product__label">
-                                <span>Cupcake</span>
-                            </div>
-                        </div>
-                        <div class="product__item__text">
-                            <h6><a href="#">Cookie Dough</a></h6>
-                            <div class="product__item__price">$25.00</div>
-                            <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                            <div class="product__item__text">
+                                <h6><a href="#">Cookies and Cream</a></h6>
+                                <div class="product__item__price">$30.00</div>
+                                <div class="cart_add">
+                                    <div><b>$30.00</b></div>
+                                </div>
                             </div>
                         </div>
                     </div>
-                </div>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-3.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a href="#">Gluten Free Mini Dozen</a></h6>
+                                <div class="product__item__price">$31.00</div>
+                                <div class="cart_add">
+                                    <div><b>$31.00</b></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
+                <a href="./prod-details.html">
+                    <div class="col-lg-3 col-md-6 col-sm-6">
+                        <div class="product__item">
+                            <div class="product__item__pic set-bg" data-setbg="img/shop/product-4.jpg">
+                                <div class="product__label">
+                                    <span>Cupcake</span>
+                                </div>
+                            </div>
+                            <div class="product__item__text">
+                                <h6><a href="#">Cookie Dough</a></h6>
+                                <div class="product__item__price">$25.00</div>
+                                <div class="cart_add">
+                                    <div><b>$25.00</b></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </a>
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="product__item">
                         <div class="product__item__pic set-bg" data-setbg="img/shop/product-5.jpg">
@@ -271,7 +280,7 @@
                             <h6><a href="#">Vanilla Salted Caramel</a></h6>
                             <div class="product__item__price">$05.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$05.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -287,7 +296,7 @@
                             <h6><a href="#">German Chocolate</a></h6>
                             <div class="product__item__price">$14.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$14.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -303,7 +312,7 @@
                             <h6><a href="#">Dulce De Leche</a></h6>
                             <div class="product__item__price">$32.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$32.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -319,7 +328,7 @@
                             <h6><a href="#">Mississippi Mud</a></h6>
                             <div class="product__item__price">$08.00</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$08.00</b></div>
                             </div>
                         </div>
                     </div>
@@ -335,7 +344,7 @@
                             <h6><a href="#">VEGAN/GLUTEN FREE</a></h6>
                             <div class="product__item__price">$98.85</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$98.85</b></div>
                             </div>
                         </div>
                     </div>
@@ -351,7 +360,7 @@
                             <h6><a href="#">SWEET CELTICS</a></h6>
                             <div class="product__item__price">$5.77</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$5.77</b></div>
                             </div>
                         </div>
                     </div>
@@ -367,7 +376,7 @@
                             <h6><a href="#">SWEET AUTUMN LEAVES</a></h6>
                             <div class="product__item__price">$26.41</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$26.41</b></div>
                             </div>
                         </div>
                     </div>
@@ -383,7 +392,7 @@
                             <h6><a href="#">PALE YELLOW SWEET</a></h6>
                             <div class="product__item__price">$22.47</div>
                             <div class="cart_add">
-                                <a href="#">Add to cart</a>
+                                <div><b>$22.47</b></div>
                             </div>
                         </div>
                     </div>
@@ -415,14 +424,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6 col-sm-6">
-                    <div class="footer__widget">
+                    <!-- <div class="footer__widget">
                         <h6>WORKING HOURS</h6>
                         <ul>
                             <li>Monday - Friday: 08:00 am – 08:30 pm</li>
                             <li>Saturday: 10:00 am – 16:30 pm</li>
                             <li>Sunday: 10:00 am – 16:30 pm</li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
                 <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
@@ -439,7 +448,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__newslatter">
                         <h6>Subscribe</h6>
                         <p>Get latest updates and offers.</p>
@@ -448,17 +457,17 @@
                             <button type="submit"><i class="fa fa-send-o"></i></button>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="copyright">
+        <!-- <div class="copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
                           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      </p>
+                      <!-- </p>
                   </div>
                   <div class="col-lg-5">
                     <div class="copyright__widget">
@@ -470,7 +479,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </footer>
 <!-- Footer Section End -->
