--- a/contact.html
+++ b/contact.html
@@ -35,9 +35,10 @@
     </div>
 
     <!-- Offcanvas Menu Begin -->
+    <!-- Mobile View Navigation bar Begin -->
     <div class="offcanvas-menu-overlay"></div>
     <div class="offcanvas-menu-wrapper">
-        <div class="offcanvas__cart">
+        <!-- <div class="offcanvas__cart">
             <div class="offcanvas__cart__links">
                 <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                 <a href="#"><img src="img/icon/heart.png" alt=""></a>
@@ -46,12 +47,12 @@
                 <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                 <div class="cart__price">Cart: <span>$0.00</span></div>
             </div>
-        </div>
+        </div> -->
         <div class="offcanvas__logo">
             <a href="./index.html"><img src="img/logo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
-        <div class="offcanvas__option">
+        <!-- <div class="offcanvas__option">
             <ul>
                 <li>USD <span class="arrow_carrot-down"></span>
                     <ul>
@@ -67,8 +68,9 @@
                 </li>
                 <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
             </ul>
-        </div>
+        </div> -->
     </div>
+    <!-- Mobile View Navigation bar End -->
     <!-- Offcanvas Menu End -->
 
     <!-- Header Section Begin -->
@@ -78,7 +80,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="header__top__inner">
-                            <div class="header__top__left">
+                            <!-- <div class="header__top__left">
                                 <ul>
                                     <li>USD <span class="arrow_carrot-down"></span>
                                         <ul>
@@ -94,11 +96,11 @@
                                     </li>
                                     <li><a href="#">Sign in</a> <span class="arrow_carrot-down"></span></li>
                                 </ul>
-                            </div>
+                            </div> -->
                             <div class="header__logo">
                                 <a href="./index.html"><img src="img/logo.png" alt=""></a>
                             </div>
-                            <div class="header__top__right">
+                            <!-- <div class="header__top__right">
                                 <div class="header__top__right__links">
                                     <a href="#" class="search-switch"><img src="img/icon/search.png" alt=""></a>
                                     <a href="#"><img src="img/icon/heart.png" alt=""></a>
@@ -107,7 +109,7 @@
                                     <a href="#"><img src="img/icon/cart.png" alt=""> <span>0</span></a>
                                     <div class="cart__price">Cart: <span>$0.00</span></div>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -120,9 +122,10 @@
                     <nav class="header__menu mobile-menu">
                         <ul>
                             <li><a href="./index.html">Home</a></li>
-                            <li><a href="./about.html">About</a></li>
-                            <li><a href="./shop.html">Shop</a></li>
-                            <li><a href="#">Pages</a>
+                            <!-- <li><a href="./about.html">About</a></li> -->
+                            <li class="active"><a href="./shop.html">Shop</a></li>
+                            <li><a href="./contact.html">Contact</a></li>
+                            <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./shop-details.html">Shop Details</a></li>
                                     <li><a href="./shoping-cart.html">Shoping Cart</a></li>
@@ -131,9 +134,8 @@
                                     <li><a href="./Class.html">Class</a></li>
                                     <li><a href="./blog-details.html">Blog Details</a></li>
                                 </ul>
-                            </li>
-                            <li><a href="./blog.html">Blog</a></li>
-                            <li class="active"><a href="./contact.html">Contact</a></li>
+                            </li> -->
+                            <!-- <li><a href="./blog.html">Blog</a></li> -->
                         </ul>
                     </nav>
                 </div>
@@ -150,35 +152,35 @@
                     <div class="row d-flex justify-content-center">
                         <div class="col-lg-4 col-md-7">
                             <div class="map__inner">
-                                <h6>COlorado</h6>
+                                <h6>India</h6>
                                 <ul>
-                                    <li>1000 Lakepoint Dr, Frisco, CO 80443, USA</li>
-                                    <li>Sweetcake@support.com</li>
-                                    <li>+1 800-786-1000</li>
+                                    <li>Mumbai, Maharashtra, India</li>
+                                    <li>thecakeshop@support.com</li>
+                                    <li>+1 000-000-1000</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="map__iframe">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d10784.188505644011!2d19.053119335158936!3d47.48899529453826!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sbd!4v1543907528304" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed/v1/view?zoom=14&center=19.0726%2C72.8845&key=AIzaSyCTG1PhZEuPkvHH9DovBumVhbFIcuRMg0g" height="300" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
-            <div class="contact__address">
+            <!-- <div class="contact__address">
                 <div class="row">
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="contact__address__item">
-                            <h6>san bernardino</h6>
+                            <h6>Mumbai Maharashtra</h6>
                             <ul>
                                 <li>
                                     <span class="icon_pin_alt"></span>
-                                    <p>795 W 5th St, San Bernardino, CA 92410, USA</p>
+                                    <p>A - 1020, This Building, Mumbai, Maharashtra - 400024</p>
                                 </li>
                                 <li><span class="icon_headphones"></span>
-                                    <p>+1 800-786-1000</p>
+                                    <p>+1 000-000-1000</p>
                                 </li>
                                 <li><span class="icon_mail_alt"></span>
-                                    <p>Sweetcake@support.com</p>
+                                    <p>thecakeshop@support.com</p>
                                 </li>
                             </ul>
                         </div>
@@ -218,13 +220,13 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <div class="row">
                 <div class="col-lg-4">
                     <div class="contact__text">
                         <h3>Contact With us</h3>
                         <ul>
-                            <li>Representatives or Advisors are available:</li>
+                            <!-- <li>Representatives or Advisors are available</li> -->
                             <li>Mon-Fri: 5:00am to 9:00pm</li>
                             <li>Sat-Sun: 6:00am to 9:00pm</li>
                         </ul>
@@ -258,17 +260,17 @@
     <footer class="footer set-bg" data-setbg="img/footer-bg.jpg">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="footer__widget">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <!-- <div class="footer__widget">
                         <h6>WORKING HOURS</h6>
                         <ul>
                             <li>Monday - Friday: 08:00 am – 08:30 pm</li>
                             <li>Saturday: 10:00 am – 16:30 pm</li>
                             <li>Sunday: 10:00 am – 16:30 pm</li>
                         </ul>
-                    </div>
+                    </div> -->
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__about">
                         <div class="footer__logo">
                             <a href="#"><img src="img/footer-logo.png" alt=""></a>
@@ -283,7 +285,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <!-- <div class="col-lg-4 col-md-6 col-sm-6">
                     <div class="footer__newslatter">
                         <h6>Subscribe</h6>
                         <p>Get latest updates and offers.</p>
@@ -292,17 +294,17 @@
                             <button type="submit"><i class="fa fa-send-o"></i></button>
                         </form>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
-        <div class="copyright">
+        <!-- <div class="copyright">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
                         <p class="copyright__text text-white"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                          Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                          <!-- Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a> -->
                           <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                      </p>
+                      <!-- </p>
                   </div>
                   <div class="col-lg-5">
                     <div class="copyright__widget">
@@ -314,7 +316,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 </footer>
 <!-- Footer Section End -->
