--- a/contact.html
+++ b/contact.html
@@ -124,8 +124,8 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <!-- <li><a href="./about.html">About</a></li> -->
-                            <li class="active"><a href="./shop.html">Shop</a></li>
-                            <li><a href="./contact.html">Contact</a></li>
+                            <li><a href="./shop.html">Shop</a></li>
+                            <li class="active"><a href="./contact.html">Contact</a></li>
                             <!-- <li><a href="#">Pages</a>
                                 <ul class="dropdown">
                                     <li><a href="./shop-details.html">Shop Details</a></li>
