--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                         <div class="col-lg-8">
                             <div class="hero__text">
                                 <h2>Making your life sweeter one bite at a time!</h2>
-                                <a href="#" class="primary-btn">Our cakes</a>
+                                <a href="./shop.html" class="primary-btn">Our cakes</a>
                             </div>
                         </div>
                     </div>
@@ -166,7 +166,7 @@
                         <div class="col-lg-8">
                             <div class="hero__text">
                                 <h2>Brightening your day one flavor at a time!</h2>
-                                <a href="#" class="primary-btn">Our cakes</a>
+                                <a href="./shop.html" class="primary-btn">Our cakes</a>
                             </div>
                         </div>
                     </div>
