--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div> -->
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./index.html"><img src="img/logo-1.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <!-- <div class="offcanvas__option">
@@ -99,7 +99,7 @@
                                 </ul>
                             </div> -->
                             <div class="header__logo">
-                                <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                                <a href="./index.html"><img src="img/logo-1.png" alt="" width="200rem"></a>
                             </div>
                             <!-- <div class="header__top__right">
                                 <div class="header__top__right__links">
