--- a/prod-details.html
+++ b/prod-details.html
@@ -207,7 +207,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, eiusmod tempor incididunt ut labore
                             et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida</p>
                         <ul>
-                            <li>SKU: <span>17</span></li>
+                            <li>Size: <span>17'</span></li>
                             <li>Category: <span>Butter cake</span></li>
                             <li>Tags: <span>Gadgets, minimalisstic</span></li>
                         </ul>
@@ -216,8 +216,8 @@
                                 <div class="pro-qty">
                                     <input type="text" value="2">
                                 </div>
-                            </div>
-                            <a href="#" class="primary-btn">Add to cart</a> -->
+                            </div> -->
+                            <a href="#" class="primary-btn">Add to cart</a>
                             <!-- <a href="#" class="heart__btn"><span class="icon_heart_alt"></span></a> -->
                         </div>
                     </div>
