Added new logo to all modules

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div> -->
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo-1.png" alt=""></a>
+            <a href="./index.html"><img src="img/logo-1.png" alt="" width="200rem"></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <!-- <div class="offcanvas__option">
